# crossword-composer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
notebooks/: 001-check-result.ipynb  002-wordlist.ipynb
src/: dictionary.rs  grid.rs  index.rs  lib.rs  main.rs  par_solver.rs  solver.rs
ui/: package.json  rollup.config.js
ui/public/: global.css  index.html  main_bg.wasm  words.txt
ui/src/: App.svelte  Crossword.svelte  crossword.js  main.js  solver.js  status.js  worker.js
ui/src/parallel/: main.js  worker.js
